rename main_content__details-form-host-select -> form__select

--- a/calendar_agenda.html
+++ b/calendar_agenda.html
@@ -4432,7 +4432,7 @@
                                 <div class="app-theme__sidebar-menu-expandable">
                                   <select
                                     name="instance_host_ids"
-                                    class="main_content__details-form-host-select"
+                                    class="form__select"
                                     disabled=""
                                     id="instance_host_ids"
                                     aria-disabled="false"
