rename full__height -> h-full, remove excess properties

--- a/calendar_week.html
+++ b/calendar_week.html
@@ -3200,7 +3200,7 @@
                             class="main_content__agenda-list-btn"
                           >
                             <div class="calendar-sideba__sched-event-wrapper">
-                              <div class="full__height">
+                              <div class="h-full">
                                 <div class="calendar-sideba__sched-event-text-wrapper">
                                   <div class="calendar-sideba__sched-event-desc-wrapper">
                                     <div class="calendar-sideba__sched-event-time-wrapper">
@@ -3279,7 +3279,7 @@
                             class="main_content__agenda-list-btn"
                           >
                             <div class="calendar-sideba__sched-event-wrapper">
-                              <div class="full__height">
+                              <div class="h-full">
                                 <div class="calendar-sideba__sched-event-text-wrapper">
                                   <div class="calendar-sideba__sched-event-desc-wrapper">
                                     <div class="calendar-sideba__sched-event-time-wrapper">
