--- a/help.html
+++ b/help.html
@@ -1482,7 +1482,7 @@
                                                         class="feature__airbnb-card"
                                                       >
                                                         <div>
-                                                          <div class="full__height">
+                                                          <div class="h-full">
                                                             <div
                                                               class="_e67dit8"
                                                               style="
@@ -1673,7 +1673,7 @@
                                                         class="feature__airbnb-card"
                                                       >
                                                         <div>
-                                                          <div class="full__height">
+                                                          <div class="h-full">
                                                             <div
                                                               class="_e67dit8"
                                                               style="
@@ -1876,7 +1876,7 @@
                                             <div class="header__logo">
                                               <div class="_w557dg">
                                                 <div class="_17pfaj7">
-                                                  <div class="full__height">
+                                                  <div class="h-full">
                                                     <div
                                                       class="_e67dit8"
                                                       style="
@@ -2032,7 +2032,7 @@
                                                   </div>
                                                 </div>
                                                 <div class="_17pfaj7">
-                                                  <div class="full__height">
+                                                  <div class="h-full">
                                                     <div
                                                       class="_e67dit8"
                                                       style="
@@ -2169,7 +2169,7 @@
                                           <div class="_pawvzww">
                                             <div class="_w557dg">
                                               <div class="_17pfaj7">
-                                                <div class="full__height">
+                                                <div class="h-full">
                                                   <div
                                                     class="_e67dit8"
                                                     style="
@@ -2324,7 +2324,7 @@
                                                 </div>
                                               </div>
                                               <div class="_17pfaj7">
-                                                <div class="full__height">
+                                                <div class="h-full">
                                                   <div
                                                     class="_e67dit8"
                                                     style="
