--- a/specific_trip.html
+++ b/specific_trip.html
@@ -263,10 +263,10 @@
                                                           >
                                                             <div
                                                               data-key="https://a0.muscache.com/im/pictures/lombard/MtTemplate-2038668-media_library/original/187cf174-8859-4bcc-bd8b-4960ad1298c1.jpeg?aki_policy=x_large"
-                                                              class="full__height"
+                                                              class="h-full"
                                                             >
                                                               <div
-                                                                class="full__height"
+                                                                class="h-full"
                                                                 style="
                                                                   transform: scale(
                                                                     1.1
@@ -428,10 +428,10 @@
                                                           >
                                                             <div
                                                               data-key="https://a0.muscache.com/im/pictures/lombard/MtTemplate-2038668-media_library/original/21b69e3e-7eb6-43ca-9bd1-ee0e9bb1d189.jpeg?aki_policy=x_large"
-                                                              class="full__height"
+                                                              class="h-full"
                                                             >
                                                               <div
-                                                                class="full__height"
+                                                                class="h-full"
                                                               >
                                                                 <button
                                                                   aria-label="View all photos"
@@ -508,10 +508,10 @@
                                                           >
                                                             <div
                                                               data-key="https://a0.muscache.com/im/pictures/lombard/MtTemplate-2038668-active_media/original/1e0e9e77-7050-4008-bed7-f035e056dd36.jpeg?aki_policy=x_large"
-                                                              class="full__height"
+                                                              class="h-full"
                                                             >
                                                               <div
-                                                                class="full__height"
+                                                                class="h-full"
                                                               >
                                                                 <button
                                                                   aria-label="View all photos"
@@ -588,10 +588,10 @@
                                                           >
                                                             <div
                                                               data-key="https://a0.muscache.com/im/pictures/lombard/MtTemplate-2038668-media_library/original/8ba0f562-198c-456d-b359-ed4e64c93679.jpeg?aki_policy=x_large"
-                                                              class="full__height"
+                                                              class="h-full"
                                                             >
                                                               <div
-                                                                class="full__height"
+                                                                class="h-full"
                                                               >
                                                                 <button
                                                                   aria-label="View all photos"
