rename _skzmvy & _1nhfz2 -> overlay

--- a/products.html
+++ b/products.html
@@ -8664,7 +8664,7 @@
                                                 <div class="_z80d2i">
                                                   <div class="_9xgknn">
                                                     <div class="_168ht2w">
-                                                      <div class="_skzmvy">
+                                                      <div class="overlay">
                                                         <div class="_5ltqju">
                                                           <div class="_13sj9hk">
                                                             <div
