--- a/specific_trip.html
+++ b/specific_trip.html
@@ -345,7 +345,7 @@
                                                                 </button>
                                                               </div>
                                                               <div
-                                                                class="_1nhfz2"
+                                                                class="overlay"
                                                                 style="
                                                                   background-color: rgba(
                                                                     0,
@@ -365,7 +365,7 @@
                                                                 "
                                                               ></div>
                                                               <div
-                                                                class="_1nhfz2"
+                                                                class="overlay"
                                                                 style="
                                                                   transform: translate3d(
                                                                     0px,
@@ -711,7 +711,7 @@
                                                           </div>
                                                           <div>
                                                             <div
-                                                              class="_1nhfz2"
+                                                              class="overlay"
                                                               style="
                                                                 background: linear-gradient(
                                                                   rgba(
