rename mw-100 -> max-w-full

--- a/products.html
+++ b/products.html
@@ -2803,7 +2803,7 @@
                                                     <img
                                                       src="assets/images/map-products.png"
                                                       alt=""
-                                                      class="mw-100"
+                                                      class="max-w-full"
                                                     />
                                                     <button
                                                       aria-label="Show map"
@@ -19495,7 +19495,7 @@
                                                   <img
                                                     src="assets/images/map-products.png"
                                                     alt=""
-                                                    class="mw-100"
+                                                    class="max-w-full"
                                                   />
                                                 </div>
                                                 <div class="_1cvivhm">
