--- a/become-a-host/intro.html
+++ b/become-a-host/intro.html
@@ -326,7 +326,7 @@
                       <div class="_dt53i0">
                         <a
                           href="/pages/become-a-host/property-type-group.html"
-                          class="_cd8zo4d w-100"
+                          class="_cd8zo4d w-full"
                           ><span class="_jxxpcd"
                             ><span
                               class="_kaq6tx"
