--- a/calendar.html
+++ b/calendar.html
@@ -1036,7 +1036,7 @@
                                 >
                                   <div class="calendar-section__month-time-wrapper">
                                     <div
-                                      class="rbc-event-content w-100"
+                                      class="rbc-event-content w-full"
                                       title="Cooking Deep Fried Bright Orange Battered Eggs"
                                     >
                                       <div class="_1skxaokw">
