--- a/inbox.html
+++ b/inbox.html
@@ -8805,7 +8805,7 @@
                                           </div>
                                         </div>
                                       </div>
-                                      <div class="w-100">
+                                      <div class="w-full">
                                         <label
                                           class="new-arrow-underscore"
                                           for="message_input"
