--- a/payment.html
+++ b/payment.html
@@ -450,7 +450,7 @@
                                                 <div class="_54vbcpj">
                                                   <label for="0"
                                                     ><div class="_ranq7o">
-                                                      <div class="w-100">
+                                                      <div class="w-full">
                                                         <div class="_1rbjsj">
                                                           <div class="flex-content-between">
                                                             Pay in full
@@ -477,7 +477,7 @@
                                                 <div class="_1bhmmha">
                                                   <label for="1"
                                                     ><div class="_ranq7o">
-                                                      <div class="w-100">
+                                                      <div class="w-full">
                                                         <div class="_1rbjsj">
                                                           <div class="flex-content-between">
                                                             Pay part now, part
