--- a/products.html
+++ b/products.html
@@ -2742,7 +2742,7 @@
                                                 >
                                                   <button
                                                     type="button"
-                                                    class="b65jmrv bgpdp7p v7aged4 dir dir-ltr w-100 w-md-auto"
+                                                    class="b65jmrv bgpdp7p v7aged4 dir dir-ltr w-full w-md-auto"
                                                   >
                                                     Show all 30 amenities
                                                   </button>
@@ -6197,7 +6197,7 @@
                                                     data-testid="pdp-show-all-reviews-button"
                                                     aria-label="Show all 134 reviews, Opens modal dialog"
                                                     type="button"
-                                                    class="b65jmrv bgpdp7p v7aged4 dir dir-ltr w-100 w-md-auto"
+                                                    class="b65jmrv bgpdp7p v7aged4 dir dir-ltr w-full w-md-auto"
                                                   >
                                                     Show all 134 reviews
                                                   </button>
@@ -16478,7 +16478,7 @@
                                                                       class="flex"
                                                                     >
                                                                       <div
-                                                                        class="w-100"
+                                                                        class="w-full"
                                                                       >
                                                                         <div
                                                                           class="relative"
@@ -16974,7 +16974,7 @@
                                                                       class="flex"
                                                                     >
                                                                       <div
-                                                                        class="w-100"
+                                                                        class="w-full"
                                                                       >
                                                                         <div
                                                                           class="relative"
@@ -17663,7 +17663,7 @@
                                                                       class="flex"
                                                                     >
                                                                       <div
-                                                                        class="w-100"
+                                                                        class="w-full"
                                                                       >
                                                                         <div
                                                                           class="relative"
