--- a/resolutions_pay.html
+++ b/resolutions_pay.html
@@ -407,7 +407,7 @@
                               </g>
                             </svg>
                           </div>
-                          <div class="w-100">
+                          <div class="w-full">
                             <div class="_1nees9c">Completed</div>
                           </div>
                         </div>
