--- a/specific_trip.html
+++ b/specific_trip.html
@@ -234,7 +234,7 @@
                                       </div>
                                     </div>
                                     <div class="_5g6li5">
-                                      <div class="w-100">
+                                      <div class="w-full">
                                         <section>
                                           <div class="main_content__details-form-max-group">
                                             <div class="page-container">
