--- a/wishlist.html
+++ b/wishlist.html
@@ -6472,7 +6472,7 @@
                                   height: 100%;
                                 "
                               >
-                                <img src="assets/images/map-wishlist.png" alt="" class='w-100'>
+                                <img src="assets/images/map-wishlist.png" alt="" class='w-full'>
                               </div>
                       </section>
                     </main>
