--- a/wishlists.html
+++ b/wishlists.html
@@ -739,9 +739,9 @@
                                 <ul class="_f68cfc">
                                   <li class="_gcfn5x">
                                     <a
-                                      class="w-100"
+                                      class="w-full"
                                       href="/wishlists/1148602671"
-                                      ><div class="w-100">
+                                      ><div class="w-full">
                                         <div class="_lwqy2j">
                                           <div class="_aca5sbg">
                                             <div
@@ -842,7 +842,7 @@
                                           </div>
                                         </div>
                                         <div class="_tdgb4l">
-                                          <div class="w-100">
+                                          <div class="w-full">
                                             <div class="_i1ipt1">
                                               1st Wishlist
                                             </div>
@@ -854,9 +854,9 @@
                                   </li>
                                   <li class="_gcfn5x">
                                     <a
-                                      class="w-100"
+                                      class="w-full"
                                       href="/wishlists/1148604100"
-                                      ><div class="w-100">
+                                      ><div class="w-full">
                                         <div class="_lwqy2j">
                                           <div class="_aca5sbg">
                                             <div
@@ -956,7 +956,7 @@
                                           </div>
                                         </div>
                                         <div class="_tdgb4l">
-                                          <div class="w-100">
+                                          <div class="w-full">
                                             <div class="_i1ipt1">5th</div>
                                             <div class="_owkz1m"></div>
                                           </div>
@@ -965,9 +965,9 @@
                                   </li>
                                   <li class="_gcfn5x">
                                     <a
-                                      class="w-100"
+                                      class="w-full"
                                       href="/wishlists/1148603879"
-                                      ><div class="w-100">
+                                      ><div class="w-full">
                                         <div class="_lwqy2j">
                                           <div class="_aca5sbg">
                                             <div
@@ -1067,7 +1067,7 @@
                                           </div>
                                         </div>
                                         <div class="_tdgb4l">
-                                          <div class="w-100">
+                                          <div class="w-full">
                                             <div class="_i1ipt1">Cooking</div>
                                             <div class="_owkz1m"></div>
                                           </div>
@@ -1076,9 +1076,9 @@
                                   </li>
                                   <li class="_gcfn5x">
                                     <a
-                                      class="w-100"
+                                      class="w-full"
                                       href="/wishlists/1148603784"
-                                      ><div class="w-100">
+                                      ><div class="w-full">
                                         <div class="_lwqy2j">
                                           <div class="_4vkmwmg">
                                             <div
@@ -1148,7 +1148,7 @@
                                           </div>
                                         </div>
                                         <div class="_tdgb4l">
-                                          <div class="w-100">
+                                          <div class="w-full">
                                             <div class="_i1ipt1">Concerts</div>
                                             <div class="_owkz1m"></div>
                                           </div>
@@ -1157,9 +1157,9 @@
                                   </li>
                                   <li class="_gcfn5x">
                                     <a
-                                      class="w-100"
+                                      class="w-full"
                                       href="/wishlists/1148603430"
-                                      ><div class="w-100">
+                                      ><div class="w-full">
                                         <div class="_lwqy2j">
                                           <div class="_aca5sbg">
                                             <div
@@ -1259,7 +1259,7 @@
                                           </div>
                                         </div>
                                         <div class="_tdgb4l">
-                                          <div class="w-100">
+                                          <div class="w-full">
                                             <div class="_i1ipt1">
                                               Experiences
                                             </div>
