--- a/contact-host.html
+++ b/contact-host.html
@@ -2344,7 +2344,7 @@
                                                                 class="flex"
                                                               >
                                                                 <div
-                                                                  class="w-100"
+                                                                  class="w-full"
                                                                 >
                                                                   <div
                                                                     class="relative"
