replace main_content__header-action-dot-icon-wrapper -> inline hidden-md, remove from css

--- a/calendar_week.html
+++ b/calendar_week.html
@@ -359,7 +359,7 @@
                             </div>
                           </div>
                           <div class="main_content__header-question-overlay"></div>
-                          <div class="main_content__header-action-dot-icon-wrapper">
+                          <div class="inline hidden-md">
                             <button
                               aria-label="Today"
                               type="button"
@@ -456,7 +456,7 @@
                                       type="button"
                                     >
                                       <div>
-                                        <div class="main_content__header-action-dot-icon-wrapper">
+                                        <div class="inline hidden-md">
                                           <svg
                                             viewBox="0 0 16 16"
                                             xmlns="http://www.w3.org/2000/svg"
@@ -758,7 +758,7 @@
                                       type="button"
                                     >
                                       <div>
-                                        <div class="main_content__header-action-dot-icon-wrapper">
+                                        <div class="inline hidden-md">
                                           <svg
                                             viewBox="0 0 16 16"
                                             xmlns="http://www.w3.org/2000/svg"
