--- a/calendar.html
+++ b/calendar.html
@@ -358,7 +358,7 @@
                             </div>
                           </div>
                           <div class="main_content__header-question-overlay"></div>
-                          <div class="main_content__header-action-dot-icon-wrapper">
+                          <div class="inline hidden-md">
                             <button
                               aria-label="Today"
                               type="button"
@@ -455,7 +455,7 @@
                                       type="button"
                                     >
                                       <div>
-                                        <div class="main_content__header-action-dot-icon-wrapper">
+                                        <div class="inline hidden-md">
                                           <svg
                                             viewBox="0 0 16 16"
                                             xmlns="http://www.w3.org/2000/svg"
@@ -757,7 +757,7 @@
                                       type="button"
                                     >
                                       <div>
-                                        <div class="main_content__header-action-dot-icon-wrapper">
+                                        <div class="inline hidden-md">
                                           <svg
                                             viewBox="0 0 16 16"
                                             xmlns="http://www.w3.org/2000/svg"
