--- a/calendar_agenda.html
+++ b/calendar_agenda.html
@@ -361,7 +361,7 @@
                             </div>
                           </div>
                           <div class="main_content__header-question-overlay"></div>
-                          <div class="main_content__header-action-dot-icon-wrapper">
+                          <div class="inline hidden-md">
                             <button
                               aria-label="Today"
                               type="button"
@@ -458,7 +458,7 @@
                                       type="button"
                                     >
                                       <div>
-                                        <div class="main_content__header-action-dot-icon-wrapper">
+                                        <div class="inline hidden-md">
                                           <svg
                                             viewBox="0 0 16 16"
                                             xmlns="http://www.w3.org/2000/svg"
@@ -760,7 +760,7 @@
                                       type="button"
                                     >
                                       <div>
-                                        <div class="main_content__header-action-dot-icon-wrapper">
+                                        <div class="inline hidden-md">
                                           <svg
                                             viewBox="0 0 16 16"
                                             xmlns="http://www.w3.org/2000/svg"
