replace main_content__header-date--prev-btns -> inline hidden-lg, remove from css

--- a/calendar_agenda.html
+++ b/calendar_agenda.html
@@ -198,7 +198,7 @@
                               Today
                             </button>
                           </div>
-                          <div class="main_content__header-date--prev-btns">
+                          <div class="inline hidden-lg">
                             <button
                               aria-label="Today"
                               type="button"
@@ -296,7 +296,7 @@
                           >
                             <div class="main_content__header-current_date">
                               <div class="main_content__header-date--today">July 9, 2022</div>
-                              <div class="main_content__header-date--prev-btns">July 2022</div>
+                              <div class="inline hidden-lg">July 2022</div>
                               <span class="main_content__header-current_date_btn_wrapper"
                                 ><svg
                                   viewBox="0 0 32 32"
