replace _t8y1n6 -> inline block-md, remove from css

--- a/payment.html
+++ b/payment.html
@@ -210,7 +210,7 @@
                                                           >
                                                             This is a rare find.
                                                           </h3></span
-                                                        ><span class="_t8y1n6"
+                                                        ><span class="inline block-md"
                                                           ><span
                                                             class="ll4r2nl dir dir-ltr"
                                                             >Sokratis-Nikos's
