rename hide-scrollbar -> hidden-scrollbar

--- a/help.html
+++ b/help.html
@@ -1458,7 +1458,7 @@
                                               <div class="_9fyhbr">
                                                 <div class="image-container">
                                                   <ul
-                                                    class="_16csp1v hide-scrollbar"
+                                                    class="_16csp1v hidden-scrollbar"
                                                     style="
                                                       margin-left: -6px;
                                                       margin-right: -6px;
