--- a/products.html
+++ b/products.html
@@ -352,7 +352,7 @@
                                           <div class="page-shell-mobile__container">
                                             <div class="image-container">
                                               <ul
-                                                class="_rxz20bq hide-scrollbar"
+                                                class="_rxz20bq hidden-scrollbar"
                                                 style="
                                                   margin-left: 0px;
                                                   margin-right: 0px;
@@ -5557,7 +5557,7 @@
                                                       "
                                                     >
                                                       <ul
-                                                        class="_rxz20bq hide-scrollbar"
+                                                        class="_rxz20bq hidden-scrollbar"
                                                         style="
                                                           margin-left: -6px;
                                                           margin-right: -6px;
